<resources>
    <string name="app_name">BirdCam</string>
    <string name="measurements">Measurements</string>
    <string name="settings">Settings</string>
    <string name="humidity">Humidity</string>
    <string name="temperature">Temperature</string>
    <string name="liveCam">Live Cam</string>
    <string name="server">Server:</string>
    <string name="connect">Connect</string>
    <string name="waiting">Waiting...</string>

    <string name="sendEmail">Send E-mail:</string>
    <string name="emailsTo">E-mails To:</string>
    <string name="required">(required)</string>
    <string name="optional">(optional)</string>
    <string name="maxDailyEmail">Maximum daily E-mail:</string>
    <string name="timeBetweenEmails">Time between E-mails:</string>
    <string name="sec">sec</string>
    <string name="time">Time:</string>
    <string name="between">between</string>
    <string name="lightSensor">Light sensor:</string>
    <string name="detection">Detection:</string>
    <string name="measurementsData">Measurements data:</string>
    <string name="dataExportCsv">Export data (.CSV)</string>
    <string name="dataExportJson">Export data (.JSON)</string>

</resources>