<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sendEmail"
                android:textSize="25dp"
                android:textColor="@color/prim"/>

            <Switch
                android:id="@+id/emailSendingSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emailsTo"
                android:textSize="25dp"
                android:textColor="@color/prim"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1.:"
                android:textSize="25dp"/>

            <EditText
                android:id="@+id/emailTo1"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/required"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2.:"
                android:textSize="25dp" />

            <EditText
                android:id="@+id/emailTo2"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/optional"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3.:"
                android:textSize="25dp"/>

            <EditText
                android:id="@+id/emailTo3"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/optional"/>
        </LinearLayout>

        <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maxDailyEmail"
            android:textSize="25dp"
            android:textColor="@color/prim"/>

            <EditText
                android:id="@+id/dailyMaxEmails"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:text="10" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timeBetweenEmails"
                android:textSize="25dp"
                android:textColor="@color/prim"/>

            <EditText
                android:id="@+id/timeBetweenEmails"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:text="10" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sec"
                android:textSize="20dp"
                android:textColor="@color/prim"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detection"
                android:textSize="25dp"
                android:textColor="@color/prim"/>

        </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <Switch
            android:id="@+id/timeDetectionSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/time"/>

        <EditText
            android:id="@+id/detectionTimeFrom"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="6"
            android:inputType="numberDecimal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text=" - "/>

        <EditText
            android:id="@+id/detectionTimeTo"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="19"
            android:inputType="numberDecimal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/between"/>

    </LinearLayout>

        <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <Switch
            android:id="@+id/ldrDetectionSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/lightSensor"/>

            <EditText
                android:id="@+id/detectionLDRFrom"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="0.5"
                android:inputType="numberDecimal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:text=" - "/>

            <EditText
                android:id="@+id/detectionLDRTo"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="1.0"
                android:inputType="numberDecimal"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/measurementsData"
                android:textSize="25dp"
                android:textColor="@color/prim"/>

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/exportCsvButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dataExportCsv"
            android:paddingHorizontal="20dp"
            android:layout_marginHorizontal="20dp"
            android:background="#117788"/>

        <Button
            android:id="@+id/exportJsonButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dataExportJson"
            android:paddingHorizontal="20dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:background="#117788"/>

    </LinearLayout>



</LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>