<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="vertical"
          android:gravity="center"
          android:id="@+id/mainLinearLayout">

          <LinearLayout
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:orientation="horizontal">
              
              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/server"
                  android:textSize="25dp"
                  android:textStyle="bold"
                  android:textColor="@color/prim"/>
              <EditText
                  android:id="@+id/serverText"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:hint="192.168.1.99:9999"
                  android:text="192.168.1.83:7000"/>
              <Button
                  android:id="@+id/connectButton"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/connect"/>
          </LinearLayout>
          
          <LinearLayout
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:orientation="horizontal"
              android:layout_marginTop="10dp">

              <Button
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/measurements"
                  android:id="@+id/dataButton"/>

              <Button
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/settings"
                  android:id="@+id/settingsButton"
                  android:layout_marginLeft="10dp" />
          </LinearLayout>

          <GridLayout
              android:id="@+id/grid"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:layout_margin="20dp"
              android:useDefaultMargins="true">

              <androidx.cardview.widget.CardView
                  android:layout_width="150dp"
                  android:layout_height="80dp"
                  android:layout_row="0"
                  android:layout_column="0"
                  android:backgroundTint="@color/prim"
                  app:cardCornerRadius="20dp">

                  <LinearLayout
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:orientation="vertical">

                      <TextView
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_gravity="center"
                          android:text="CPU"
                          android:textSize="25sp"
                          android:textColor="@color/white"
                          android:textStyle="bold"/>

                      <TextView
                          android:id="@+id/cpuTempText"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/waiting"
                          android:textSize="25sp"
                          android:layout_gravity="center"
                          android:textColor="@color/white"/>
                  </LinearLayout>
              </androidx.cardview.widget.CardView>

              <androidx.cardview.widget.CardView
                  android:layout_width="150dp"
                  android:layout_height="80dp"
                  android:layout_row="0"
                  android:layout_column="1"
                  android:backgroundTint="@color/prim"
                  app:cardCornerRadius="20dp">

                  <LinearLayout
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:orientation="vertical">

                      <TextView
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_gravity="center"
                          android:text="LDR"
                          android:textSize="25sp"
                          android:textColor="@color/white"
                          android:textStyle="bold"/>

                      <TextView
                          android:id="@+id/ldrText"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/waiting"
                          android:textSize="25sp"
                          android:layout_gravity="center"
                          android:textColor="@color/white"/>
                  </LinearLayout>
              </androidx.cardview.widget.CardView>

              <androidx.cardview.widget.CardView
                  android:layout_width="150dp"
                  android:layout_height="80dp"
                  android:layout_row="1"
                  android:layout_column="0"
                  android:backgroundTint="@color/prim"
                  app:cardCornerRadius="20dp">

                  <LinearLayout
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:orientation="vertical">

                  <TextView
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_gravity="center"
                      android:text="@string/humidity"
                      android:textSize="20dp"
                      android:textColor="@color/white"
                      android:textStyle="bold"/>
                  <TextView
                      android:id="@+id/humidityText"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/waiting"
                      android:textSize="25sp"
                      android:layout_gravity="center"
                      android:textColor="@color/white"/>
                  </LinearLayout>
              </androidx.cardview.widget.CardView>

              <androidx.cardview.widget.CardView
                  android:layout_width="150dp"
                  android:layout_height="80dp"
                  android:layout_row="1"
                  android:layout_column="1"
                  android:backgroundTint="@color/prim"
                  app:cardCornerRadius="20dp">

                  <LinearLayout
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:orientation="vertical">

                  <TextView
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_gravity="center"
                      android:text="@string/temperature"
                      android:textSize="20dp"
                      android:textColor="@color/white"
                      android:textStyle="bold"/>
                  <TextView
                      android:id="@+id/temperatureText"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/waiting"
                      android:textSize="25sp"
                      android:layout_gravity="center"
                      android:textColor="@color/white"/>
                  </LinearLayout>
              </androidx.cardview.widget.CardView>

          </GridLayout>
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/liveCam"
              android:textSize="25sp"
              android:textStyle="bold"/>

          <com.faizkhan.mjpegviewer.MjpegView
              android:layout_margin="15dp"
              android:id="@+id/liveCamImage"
              android:layout_width="wrap_content"
              android:layout_height="200dp"
              app:layout_constraintStart_toStartOf="@id/grid"
              app:layout_constraintTop_toBottomOf="@+id/temperatureText" />
      </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>